# guile-god

./: .editorconfig  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  GNUmakefile  INSTALL.md  Makefile.in  README.md  build.ninja  configure  meson.build  meson.options
doc/: manual.texi  version.texi
example/: complex.god  deep.god  directions.god  escaped-string.god  package.god  simple.god
src/: god.scm
src/god/: conv.scm  parse.scm  token.scm  util.scm
src/god/conv/: hash.scm
test/: all.scm  bool.test.scm  nested.test.scm  null.test.scm  simple.test.scm  testing-reqs.scm  types.test.scm
test/samples/: bool.god  nested.god  null.god  simple.god  types.god
